test: replace emptyList with List.of in JBoss resolver test
Agent-Logs-Url: https://github.com/psi-probe/psi-probe/sessions/ac34ac68-54e0-433b-b108-58b3ecda340f

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>